--- a/TPolinom/TPolinom.vcxproj
+++ b/TPolinom/TPolinom.vcxproj
@@ -141,12 +141,14 @@
   <ItemGroup>
     <ClInclude Include="THeadList.h" />
     <ClInclude Include="TList.h" />
+    <ClInclude Include="TMonom.h" />
     <ClInclude Include="TNode.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="THeadList.cpp" />
     <ClCompile Include="TList.cpp" />
+    <ClCompile Include="TMonom.cpp" />
     <ClCompile Include="TNode.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
