--- a/TPolinom/TPolinom.vcxproj.filters
+++ b/TPolinom/TPolinom.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="THeadList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TMonom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TList.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="THeadList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TMonom.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
