--- a/TPolinom/TPolinom.vcxproj.filters
+++ b/TPolinom/TPolinom.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="TMonom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TPolinom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TList.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TMonom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TPolinom.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
